Progress in Latex

--- a/Tesis/anexoA.tex
+++ b/Tesis/anexoA.tex
@@ -1,4 +1,4 @@
-\chapter{Anexo A: Formulario basado en MEEGA+} \label{AnexoA}
+\chapter*{Anexo A: Formulario basado en MEEGA+} \label{AnexoA}
 
 \newgeometry{margin=0.5in}
 
@@ -6,44 +6,6 @@
 \centering
 \caption{Formulario basado en MEEGA+. Se eliminó la dimensión social y no se incluyeron los ítems que preguntan por los objetivos particulares del juego.}
 \label{TablaFormularioMEEGA}
-
-% i1*: El diseño de juego es atractivo
-% i2: La fuente de texto y los colores están bien combinados y son consistentes
-% i3: Tuve que aprender cosas antes de poder jugar
-% i4: Aprender a jugar se me hizo fácil 
-% i5*: Creo que la mayoría de la gente aprendería a usar este juego rápidamente.
-% i6*: Creo que el juego es fácil de jugar.
-% i7*: Las reglas del juego son claras y fáciles de entender
-% i8: Las fuentes (su tamaño y estilo) usadas son fáciles de leer
-% i9: Los colores usados en el juego son significativos
-% i10: La estructura me ayudó a tener confianza en que aprendería con este juego
-% i11: Este juego es desafiante en la medida justa
-% i12: El juego ofrece nuevos desafíos a un ritmo adecuado
-% (i13 manual): El juego no se vuelve monótomo a medida que se avanza
-% (i13 en paper): Cuando vi el juego por primera vez, tuve la sensación de que sería fácil para mí
-% i14*: Completar las tareas del juego me provocó satisfacción
-% i15*: Pude avanzar en el juego gracias a mi esfuerzo personal
-% i16*: Siento satisfacción con lo aprendido en este juego
-% i17*: Recomendaría este juego a mis colegas
-
-% *** Social questions are skipped, from i18 to i20.
-% *** Pude interactuar con otros jugadores mientras jugaba.
-% *** El juego promueve la cooperación o competencia entre jugadores.
-% *** Me sentí bien interactuando con otros jugadores durante el juego.
-
-% i21*: Me entretuve con el juego
-% i22*: Algún elemento del juego me hizo sonreír
-% i23*: Había algo interesante al inicio del juego que llamó mi atención
-% i24*: Estaba tan envuelt@ en la tarea propuesta por el juego que perdí la noción del tiempo
-% i25*: Me olvidé de mi entorno físico mientras jugaba
-% i26*: Los contenidos del juego son relevantes para mis intereses
-% i27*: Es claro ver que los contenidos del juego se relacionan a cierta materia de la carrera
-% i28*: Este juego es adecuado para enseñar el contenido
-% i29*: Prefiero aprender con este juego en vez de aprender con otros métodos de enseñanza
-% i30*: El juego contribuyó a mi aprendizaje
-% i31*: El juego me permitió aprender de forma eficiente en comparación con otras actividades
-
-
 \begin{tabular}{|c|l|} % borde | columna fuente centrada | borde | columna fuente a la izq | 
 \hline % Linea horizontal inicial
 \textbf{Notación} & \textbf{Pregunta} \\\hline % Separa el inicio
@@ -67,7 +29,7 @@ Q17      & Recomendaría este juego a mis colegas \\
 Q18*     & Pude interactuar con otros jugadores mientras jugaba. \\
 Q19*     & El juego promueve la cooperación o competencia entre jugadores. \\
 Q20*     & Me sentí bien interactuando con otros jugadores durante el juego. \\
-Q21*     & Me entretuve con el juego \\
+Q21     & Me entretuve con el juego \\
 Q22      & Algún elemento del juego me hizo sonreír \\
 Q23      & Había algo interesante al inicio del juego que llamó mi atención \\
 Q24      & Estaba tan envuelta/o en la tarea propuesta por el juego que perdí la noción del tiempo \\
@@ -82,6 +44,10 @@ Q31      & El juego me permitió aprender de forma eficiente en comparación con
 
 \hline
 \end{tabular}
+\vspace{0.5em} % Adjust the vertical space
+\par
+Preguntas con * es porque no estaban en el formulario. Se omitieron y se rellenaron con 0 porque el juego no incluía interacción con otros jugadores.
+
 \end{table}
 
 \restoregeometry
