--- a/Tesis/anexoB.tex
+++ b/Tesis/anexoB.tex
@@ -1,5 +1,5 @@
 
-\chapter{Anexo B: Prueba de conocimiento de grafos} \label{AnexoB}
+\chapter*{Anexo B: Prueba de conocimiento de grafos} \label{AnexoB}
 \textbf{Test para verificar aprendizaje de BFS y DFS}
 
 Considere el siguiente grafo:
