--- a/Tesis/anexoD.tex
+++ b/Tesis/anexoD.tex
@@ -1,4 +1,4 @@
-\chapter{Anexo D: Aprobación de Comité de Ética}\label{AnexoD}
+\chapter*{Anexo D: Aprobación de Comité de Ética}\label{AnexoD}
 % Poner aquí el PDF del comité de ética
 
 Revisar siguiente página. Esta aprobación se dio como respuesta a una solicitud para realizar un trabajo de título con personas, para asegurarse que se enmarcara dentro del marco ético establecido por la facultad.
