--- a/Tesis/anexoE.tex
+++ b/Tesis/anexoE.tex
@@ -1,4 +1,4 @@
-\chapter{Anexo E: Consentimiento de participación voluntaria}\label{AnexoE}
+\chapter*{Anexo E: Consentimiento de participación voluntaria}\label{AnexoE}
 
 Revisar siguiente página. Este consentimiento debió firmarlo cada participante antes de empezar con la actividad. Era requerido por parte de la facultad para asegurar que cada individuo voluntario estuviera de acuerdo con formar parte del trabajo.
 
