--- a/Tesis/bibliografia.bib
+++ b/Tesis/bibliografia.bib
@@ -1,5 +1,5 @@
 @BOOK{KAR00,
-  title = {Brownian Motion and Stochastic Calculus},
+  title = {Brownian Motion and Stochastic Calculus},  
   publisher = {Springer},
   year = {2000},
   author = {Ioannis Karatzas. and Steven E. Shreve},
@@ -379,3 +379,53 @@ DOI = {10.3390/educsci9040276}
   pages={825 - 846},
   url={https://api.semanticscholar.org/CorpusID:144923020}
 }
+
+@misc{meegaplusQualityEvaluationPage,
+  title={MEEGA+ A model for evaluating educational games}, 
+  author={GQS UFSC},
+  howpublished = {\url{http://www.gqs.ufsc.br/quality-evaluation/meega-plus/}},  
+  note = {Accessed: 2023-Nov-2}
+}
+
+@misc{GithubRepo,
+  title={IGASCE GitHub Repository}, 
+  author={Utreras, Alonso},
+  howpublished = {\url{https://github.com/AlasAltum/Thesis-IGACSE}},  
+  note = {Accessed: 2023-Nov-2}
+}
+
+@article{RashMeasurementTheoryAndrichMarais,
+  title={A Course in Rasch Measurement Theory: Measuring in the Educational, Social and Health Sciences},
+  author={David Andrich and Ida Marais},
+  journal={A Course in Rasch Measurement Theory},
+  year={2019},
+  url={https://api.semanticscholar.org/CorpusID:199178654}
+}
+
+@techreport{MeegaPlusManual, 
+  title = {MEEGA+: A Method for the Evaluation of Educational Games for Computing Education},
+  author = {Petri, Giani and Gresse von Wangenheim, Christiane and Borgatto, Adriano Ferreti},
+  institution = {INCoD - Brazilian Institute for Digital Convergence},
+  year = {2018},
+  type = {Technical Report},
+  number = {INCoD/GQS.05.2018.E},
+  url = {https://www.incod.ufsc.br/wp-content/uploads/2018/03/Relatorio-Tecnico-INCoD_GQS_05_2018_E.pdf},
+  issn = {2236-5281} 
+}
+
+@misc{7billionhumans,
+  title = {7 Billion Humans - Now Available!},
+  author = {Tomorrow Corporation},
+  url = {http://tomorrowcorporation.com/7billionhumans},
+  year = {2023},
+  note = {Accessed: 2023-11-15}
+}
+
+@online{vscode,
+  title = {Visual Studio Code},
+  url = {https://en.wikipedia.org/wiki/Visual_Studio_Code},
+  author = {Microsoft},
+  year = 2023,
+  urldate = {2023-11-15}
+}
+
