--- a/Tesis/discusion.tex
+++ b/Tesis/discusion.tex
@@ -15,9 +15,11 @@
 
 \section{Fortalezas de la metodología aplicada}
 
-La principal fortaleza de la metodología aplicada es que se basa en un formulario estandarizado y ya probado. Existe una confianza alta en que el formulario mide lo que efectivamente busca medir, lo cual se validó a través de la delta de Cronbach \cite{meegaplus}.
+La principal fortaleza de la metodología aplicada es que se basa en un formulario estandarizado y ya probado. Existe una confianza alta en que el formulario mide lo que efectivamente busca medir, lo cual se validó a través de la delta de Cronbach \cite{meegaplus}. Esta metodología permite asignar un valor numérico a la calidad del juego según las opiniones de los usuarios. Este valor numérico se considera rasgo latente (latent trait) y se suele designar con el signo $\theta$ en IRT \cite{RashMeasurementTheoryAndrichMarais}.
 
-El proceso de diseño también se considera robusto, pues incorporó retroalimentación por parte de expertos y la utilización de la metodología de Loud Thinking en cada iteración, lo que permitió que los jugadores pudieran desenvolverse correctamente en el juego y finalmente responder la prueba escrita.
+El proceso de diseño también se considera robusto, pues incorporó retroalimentación por parte de expertos y la utilización de la metodología de Loud Thinking en cada iteración, lo que permitió que los jugadores pudieran desenvolverse correctamente en el juego y finalmente responder la prueba escrita. Se comprobó empíricamente cómo mejoró la usabilidad en cada paso.
+
+El proceso además está fuertemente documentado, pues la historia de desarrollo está disponible en un repositorio de Github \cite{GithubRepo}, de manera que cada iteración del juego es reproducible, e incluso los experimentos con usuarios son reproducibles, permitiendo a otro investigador volver a una versión anterior del videojuego y probarla con usuarios distintos en cada ocasión.
 
 
 
