--- a/Tesis/main.tex
+++ b/Tesis/main.tex
@@ -91,11 +91,11 @@ A mi abuelo, que siempre me apoyó en mis estudios.
 \bibliography{bibliografia}
 
 % opcional ...
-\begin{appendices}
+% \begin{appendices}
 \input{anexoA.tex}
 \input{anexoB.tex}
 \input{anexoC.tex}
 \input{anexoD.tex}
 \input{anexoE.tex}
-\end{appendices}
+% \end{appendices}
 \end{document}
