--- a/Tesis/metodologia.tex
+++ b/Tesis/metodologia.tex
@@ -27,19 +27,19 @@ Se consiguió una muestra de 15 personas que participaron en esta fase de princi
 
 Para iniciar esta fase, se hizo un llamado voluntario en el foro de las secciones de Algoritmos y Estructuras de Datos de la Universidad de Chile durante el semestre de primavera del año 2023. Se ofreció remuneración a todas las personas que completaran la experiencia. La experiencia duraba 45 minutos en promedio y consistía en tres partes: Realizar la prueba de usuario, llenar un formulario basado en el modelo MEEGA+ \cite{meegaplus} y responder la prueba escrita. % Revisar si digo que el formulario está basado en la METODOLOGÍA? UTILIZA? ES DEL TIPO?
 
-El modelo sistemático MEEGA+ \cite{meegaplus} está hecho para evaluar videojuegos educativo, el cual busca evaluar la percepción de la calidad de un videojuego desde la perspectiva del estudiante en el contexto de la enseñanza de la computación.  El formulario utilizado en este estudio, basado en MEEGA+ \cite{meegaplus} se encuentra en el anexo \ref{Anexomeegaplus}.
+El modelo sistemático MEEGA+ \cite{meegaplus} está hecho para evaluar videojuegos educativo, el cual busca evaluar la percepción de la calidad de un videojuego desde la perspectiva del estudiante en el contexto de la enseñanza de la computación.  El formulario utilizado en este estudio, basado en MEEGA+ \cite{meegaplus} se encuentra en el anexo \ref{AnexoA}.
 
-La medición de rendimiento académico se hace a través de una prueba escrita con dos preguntas, basadas en una pregunta de un examen del ramo de Algoritmos y Estructuras de Datos de la misma facultad. La prueba escrita se encuentra en el anexo \ref{AnexoPruebaEscrita}.
+La medición de rendimiento académico se hace a través de una prueba escrita con dos preguntas, basadas en una pregunta de un examen del ramo de Algoritmos y Estructuras de Datos de la misma facultad. La prueba escrita se encuentra en el anexo \ref{AnexoB}.
 % PONER REFERENCIA ACÁ AL ANEXO. VER CÓMO INCLUIR LA PRUEBA EN EL PDF. TODO.
 
-\subsection{Trabajo y encuesta libre}
+\subsection{Encuesta libre}
 
 % Anotar aquí antes de que termine la tesis cuánta gente fue en total.
 
-Para ampliar el estudio y aumentar el tamaño muestral, se realizó una tercera experiencia abierta a todo público que supiera programar. Se envió una invitación en distintas comunidades de videojuegos a probar el juego educativo y llenar el formulario. Como las experiencias podían variar de gran manera en este trabajo, se agregó una pregunta que pregunta por el nivel de experiencia en programación, para permitir la segmentación. El formulario utilizado también corresponde al modelo MEEGA+. Los resultados se anotaron aparte de la fase anterior.
+Para ampliar el estudio y aumentar el tamaño muestral, se realizó una tercera experiencia abierta a todo público que supiera programar. Se envió una invitación en distintas comunidades de videojuegos a probar el juego educativo y llenar el formulario. Como las experiencias podían variar de gran manera en este trabajo, se agregó una pregunta que pregunta por el nivel de experiencia en programación, para permitir la segmentación. El formulario utilizado también corresponde al modelo MEEGA+, pero las respuestas recolectadas se guardaron en una base de datos separada del grupo anterior. 
 
 
-% \subsection{Marco teórico que justifica la metodología}
+\subsection{Marco teórico que justifica el modelo MEEGA+}
 
-% Hablar aquí de MEEGA+, su metodología, por qué funciona lo que hicimos
-% Quizás poner una adaptación del cálculo de un buen juego
+TODO: Hablar aquí de MEEGA+, su metodología, por qué funciona lo que hicimos. Explicar un poco sobre IRT, la elección de parámetros que usan y cómo se justifica. \cite{MeegaPlusManual}.
+
