--- a/Tesis/trabajo_relacionado.tex
+++ b/Tesis/trabajo_relacionado.tex
@@ -1,23 +1,23 @@
 \chapter{Trabajo Relacionado}
 
 
-Un videojuego es una forma de aprendizaje activo, pues el proceso de enseñanza no se desarrolla partiendo por un profesor exponiendo frente a un estudiante. En este caso, quien aprende debe ejectuar pasos y participar en alguna actividad a través de la cual se construye el conocimiento. En la reseña realizada por Hartikainen et al. \cite{active_learning_review} se enumeran justificaciones para el aprendizaje activo:  mejores resultados, recomendaciones políticas y las nuevas demandas de la vida laboral actual, como capacidades de comunicación o descubrimiento por cuenta propia. 
+\subsection{Videojuegos educativos o serios}
 
-Los videojuegos serios (Serious Gaming) son una forma de aprendizaje activo. Un trabajo de Bell y Gibson \cite{evaluation_of_games_for_teaching_cs} indican que los juegos educacionales son más efectivos que las clases, lecturas, videos y tareas. Se resume que el uso de juegos resulta en 1) mejor retención, 2) mejor conocimiento fáctico, 3) mejor conocimiento basado en habilidades y 4) mayor autoeficacia. Sin embargo, recomiendan que los juegos  deben ser acompañados de otras formas de enseñanza, así como hacer actividades post juego donde se le pregunta al estudiantado cómo se relacionan los juegos a la materia.
+Un videojuego representa una modalidad de aprendizaje activo, donde el proceso de enseñanza no sigue la estructura tradicional que consiste en tener a un profesor exponiendo frente a un estudiante. En este enfoque, el aprendizaje implica la ejecución de pasos y la participación activa del estudiante en actividades que contribuyen a la construcción del conocimiento. La revisión realizada por Hartikainen et al. \cite{active_learning_review} presenta argumentos a favor del aprendizaje activo, destacando mejores resultados, respaldo político y las demandas contemporáneas del entorno laboral, como habilidades de comunicación y la capacidad de aprendizaje autónomo.
 
-Bell y Gibson \cite{evaluation_of_games_for_teaching_cs} identificaron y clasificaron videosjuegos de Ciencias de la Computación (CS), considerando un total de 41 videojuegos. Uno de ellos, Map Coloring, se trata sobre grafos, tomando el tema de coloreo de grafos. Se realizó una búsqueda del juego a la fecha (2022), pero no se encontró ningún material al respecto.
+Los videojuegos serios, también conocidos como ``Serious Gaming'', constituyen una forma de aprendizaje activo. Bell y Gibson \cite{evaluation_of_games_for_teaching_cs} sostienen que los juegos educativos son más efectivos que las clases tradicionales, lecturas, videos y tareas. Estos autores afirman que el uso de juegos conlleva a una mejora en la retención, conocimiento factual, habilidades basadas en el conocimiento, y autoeficacia. No obstante, recomiendan que los juegos deben complementarse con otras formas de enseñanza y actividades posteriores al juego que permitan a los estudiantes reflexionar sobre la relación entre los juegos y la materia.
+
+\subsection{Análisis de otros autores sobre el potencial y falencias al trabajar con videojuegos educativos}
+
+Bell y Gibson \cite{evaluation_of_games_for_teaching_cs} identificaron y clasificaron 41 videojuegos de Ciencias de la Computación (CS). Uno de ellos, ``Map Coloring", aborda el tema de grafos, en particular el coloreo de grafos. Aunque se realizó una búsqueda del juego hasta la fecha (2022), no se encontró material al respecto.
 
 Kiili y su equipo \cite{using_videogames_maths} analizaron el uso de videojuegos en enseñanza y evaluación en matemáticas a través de los títulos ``Semideus'' y "Wuzzit Trouble". A través de estos, llegaron a la conclusión de que es posible utilizar videojuegos para enseñar y evaluar al mismo tiempo. Además, caracterizaron estadísticamente las diferencias producidas por el uso de videojuegos entre resultados de un pre test y un post test.
 
-En el trabajo realizado por Zhao y Shute \cite{video_game_foster_computational_thinking} se enumeran ejemplos de videojuegos pensados para enseñar programación, tales como Wu's Castle \cite{wuscastle}, CodeCombat \cite{CodeCombat}, CodeSpell \cite{codespells}, MiniColon \cite{minicolon}, tales ejemplos utilizan programación con texto. Sin embargo, también hay numerosos ejemplos que utilizan programación por bloques, como LightBot \cite{LightBot}, Scratch \cite{maloney2010scratch}, \cite{scratch} y RoboBuilder \cite{RoboBuilder}, los cuales abstraen el trabajo de aprender una sintaxis relacionada a los lenguajes de programación.
+En el trabajo de Zhao y Shute \cite{video_game_foster_computational_thinking}, se enlistan ejemplos de videojuegos diseñados para enseñar programación, como Wu's Castle \cite{wuscastle}, CodeCombat \cite{CodeCombat}, CodeSpell \cite{codespells}, y MiniColon \cite{minicolon}. Estos ejemplos emplean programación con texto. No obstante, también existen numerosos referentes que utilizan programación por bloques, como LightBot \cite{LightBot}, Scratch \cite{ scratch, maloney2010scratch}, y RoboBuilder \cite{RoboBuilder}, los cuales simplifican el proceso de aprender una sintaxis relacionada con los lenguajes de programación.
 
-Sin embargo, el impacto de estos videojuegos no ha sido evaluado en muchos casos. En los casos documentados, se cuenta con muestras pequeñas, además de que se trata principalmente de evaluaciones puramente cualitativas \cite{video_game_foster_computational_thinking}, \cite{effectiveness_gbl}.
+A pesar de esto, el impacto de estos videojuegos no ha sido evaluado en muchos casos. En las instancias documentadas, las muestras suelen ser reducidas, y las evaluaciones se centran principalmente en aspectos cualitativos \cite{video_game_foster_computational_thinking, effectiveness_gbl}.
 
-Petri y otros \cite{meegaplus} están de acuerdo en que no hay sistematización en la evaluación de videojuegos educativos. En efecto, hay juegos serios que ni siquiera se denominan o consideran como tales \cite{evaluation_of_games_for_teaching_cs}. Por otra parte, no existe una forma estándar de evaluarlos, razón por la cual Petri et al. \cite{meegaplus} crearon el modelo MEEGA+ (Model for the Evaluation of Educational Games and EGameFlow scale).
+Petri y otros \cite{meegaplus} coinciden en la falta de sistematización en la evaluación de videojuegos educativos. De hecho, existen juegos serios que ni siquiera se autodenominan o se consideran como tales \cite{evaluation_of_games_for_teaching_cs}. Además, no hay un método estándar para evaluarlos, razón por la cual Petri et al. \cite{meegaplus} desarrollaron el modelo MEEGA+ (Modelo para la Evaluación de Juegos Educativos y Escala EGameFlow.
 
-Entre las faltas mencionadas al momento de crear videojuegos, se mencionan las faltas de 1) Definición de un objetivo de evaluación; 2) Diseño de investigación; 3) Programa de medición; 4) Instrumentos de recolección de datos y 5) Métodos de análisis de datos. Un ejemplo de falta de sistematización: una práctica común al analizar estas herramientas son los comentarios informales por parte del estudiantado \cite{meegaplus}.
-
-
-
-
+Entre las deficiencias señaladas al momento de crear videojuegos, se encuentran la carencia de: 1) Definición de un objetivo de evaluación; 2) Diseño de investigación; 3) Plan de medición; 4) Instrumentos de recopilación de datos; y 5) Métodos de análisis de datos. Un ejemplo de falta de sistematización es la práctica común al analizar estas herramientas, que implica comentarios informales por parte del estudiantado \cite{meegaplus}.
 
