--- a/Propuesta/generic.bib
+++ b/Propuesta/generic.bib
@@ -129,7 +129,8 @@ DOI = {10.3390/educsci9040276}
 }
 
  @misc{CodeCombat,
-  title={CodeCombat: Coding games to learn python and JavaScript}, 
+  title={CodeCombat: Coding games to learn python and JavaScript},
+  author={CodeCombat Inc.}, 
   howpublished = {\url{https://www.codecombat.com/}}, 
   journal={CodeCombat}, 
   publisher={CodeCombat}, 
