--- a/Tesis/anexoC.tex
+++ b/Tesis/anexoC.tex
@@ -1,9 +1,8 @@
-\chapter{Anexo C: Respuestas de pruebas de usuario}\label{AnexoC}
+\chapter*{Anexo C: Respuestas de pruebas de usuario}\label{AnexoC}
 
-
+\subsection*{Prueba de usabilidad en conjunto con prueba académica}
 Q1;Q2;Q3;Q4;Q5;Q6;Q7;Q8;Q9;Q10;Q11;Q12;Q13;Q14;Q15;Q16;Q17;Q18;Q19;Q20;Q21;Q22;Q23;Q24;Q25;Q26;Q27;Q28;Q29;Q30;Q31
-0;0;5;0;0;0;0;1;0;0;0;0;1;1;0;0;0;15;15;15;1;1;0;1;0;0;0;0;1;0;0
-1;0;4;1;1;0;1;4;0;1;0;1;2;0;0;1;2;0;0;0;0;0;2;0;2;1;0;2;2;0;0
-2;2;1;5;3;3;4;1;3;2;0;1;1;1;1;1;1;0;0;0;1;0;0;4;2;4;0;0;0;1;3
-3;5;4;6;8;9;8;2;4;1;7;5;3;4;7;7;2;0;0;0;3;3;7;5;3;5;2;3;6;7;6
-9;8;1;3;3;3;2;7;8;11;8;8;8;9;7;6;10;0;0;0;10;11;6;5;8;5;13;10;6;7;6
+
+
+
+\subsection*{Prueba de usabilidad en formato libre para cualquier usuario}
